--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "highlight-marker",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "src/index",
   "scripts": {
     "test": "gulp test"
@@ -9,9 +9,11 @@
     "lodash": "^4.13.1"
   },
   "devDependencies": {
-    "gore-gulp": "^0.12.0",
-    "gulp": "^3.9.1",
-    "space-preconfigured-eslint": "^1.4.11",
-    "space-preconfigured-mocha": "^1.1.2"
+    "gore-gulp": "^0.15.1",
+    "gulp": "^3.9.1"
+  },
+  "directories": {
+    "dist": "public/js",
+    "lib": "src"
   }
 }
