--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "diacritics": "^1.3.0",
     "lodash": "^4.13.1"
   },
   "devDependencies": {
